tests/ui/ferrocene/compiler-arguments/error-format/error-format_short.stderr
$DIR/error-format_short.rs:5:13: error[E0425]: cannot find value `x` in this scope
error: aborting due to previous error
