tests/ui/ferrocene/compiler-arguments/error-format/error-format_short.rs
// check-fail
// compile-flags: --error-format short

fn main() {
    let x = x; //~ ERROR cannot find value `x` in this scope
}

// ferrocene-annotations: um_rustc_error_format
